<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/movie_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:errorEnabled="true"
        android:hint="@string/title">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/director_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/movie_container"
        app:layout_constraintStart_toStartOf="parent"
        app:errorEnabled="true"
        android:hint="@string/director">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/director"
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/director_container"
        app:layout_constraintStart_toStartOf="parent"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dor_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/type"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        app:errorEnabled="true"
        android:hint="@string/dor">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dor"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@drawable/roundshape"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/dor_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>